ferrite-os/native/core/include/gpu/gpu_hot_runtime.h


struct GPUHotRuntime;
typedef struct GPUHotRuntime GPUHotRuntime;
typedef struct PTXTaskQueue {
    PTXOSTask tasks[PTX_MAX_QUEUE_SIZE];
    volatile uint32_t head;
    volatile uint32_t tail;
    volatile uint32_t lock;
} PTXTaskQueue;
typedef struct VMMPageEntry {
    void* gpu_addr;             
    void* original_addr;        
    void* host_addr;            
    size_t size;                
    uint32_t flags;             
    uint64_t last_access;       
    uint32_t access_count;      
    bool resident;              
    bool dirty;                 
    bool pinned;                
} VMMPageEntry;
typedef struct VMMState {
    GPUHotRuntime* runtime;   
    VMMPageEntry pages[VMM_MAX_PAGES];
    uint32_t num_pages;
    uint32_t resident_pages;
    uint32_t swapped_pages;
    void* swap_regions[VMM_MAX_SWAP_REGIONS];
    size_t swap_region_sizes[VMM_MAX_SWAP_REGIONS];
    uint32_t num_swap_regions;
    size_t total_swap_size;
    size_t used_swap_size;
    uint64_t page_faults;
    uint64_t swap_ins;
    uint64_t swap_outs;
    uint64_t evictions;
} VMMState;
typedef enum VFSNodeType {
    VFS_NODE_FILE,
    VFS_NODE_DIRECTORY,
    VFS_NODE_TENSOR,
    VFS_NODE_STREAM,
    VFS_NODE_DEVICE
} VFSNodeType;
typedef struct VFSInode {
    uint32_t inode_id;
    char name[GPU_HOT_MAX_NAME_LEN];
    char path[VFS_MAX_PATH_LEN];
    VFSNodeType type;
    void* data;
    size_t size;
    int dims;
    int shape[8];
    int dtype;  
    struct VFSInode* parent;
    struct VFSInode* first_child;
    struct VFSInode* next_sibling;
    uint64_t created_at;
    uint64_t modified_at;
    uint64_t accessed_at;
    uint32_t mode;
    uint32_t uid;
    uint32_t gid;
    bool active;
} VFSInode;
typedef struct VFSFileHandle {
    uint32_t fd;
    VFSInode* inode;
    size_t offset;
    uint32_t flags;
    bool is_open;
} VFSFileHandle;
typedef struct VFSState {
    GPUHotRuntime* runtime;   
    VFSInode inodes[VFS_MAX_NODES];
    uint32_t num_inodes;
    VFSInode* root;
    VFSFileHandle open_files[VFS_MAX_OPEN_FILES];
    uint32_t num_open_files;
    uint32_t next_fd;
    uint64_t reads;
    uint64_t writes;
    uint64_t opens;
    uint64_t closes;
} VFSState;
typedef struct PTXSystemState {
    uint32_t auth_token;
    volatile int active_processes;
    volatile int active_tasks;
    volatile int max_priority_active;
    volatile size_t total_vram_used;
    volatile bool watchdog_alert;
    volatile bool kernel_running;
    volatile bool shutdown_requested;
    volatile int active_priority_level;
    volatile uint64_t signal_mask;
    volatile uint32_t interrupt_cnt;
    PTXTaskQueue queue;
    volatile uint64_t total_ops;
    volatile uint32_t fs_node_count;
    VMMState* vmm;
    VFSState* vfs;
} PTXSystemState;
typedef struct GPUHotStats {
    size_t vram_allocated;
    size_t vram_used;
    size_t vram_free;
    float gpu_utilization;      
    float mem_utilization;      
    uint32_t sm_clock_mhz;      
    uint32_t mem_clock_mhz;     
    float power_w;              
    int32_t temperature_c;      
    bool nvml_valid;            
    float hw_ops_per_sec;       
    float gflops_total;         
    bool cupti_valid;           
    int active_streams;         
    int stream_poll_count;      
    uint8_t stream_busy[128];   
    int registered_kernels;
    int shm_count;
    uint64_t total_ops;
    float avg_latency_us;
    bool watchdog_tripped;
} GPUHotStats;
typedef struct TLSFPoolStats {
    size_t total_pool_size;
    size_t allocated_bytes;
    size_t free_bytes;
    size_t peak_allocated;
    size_t largest_free_block;
    size_t smallest_free_block;
    uint32_t total_blocks;
    uint32_t free_blocks;
    uint32_t allocated_blocks;
    uint32_t fallback_count;
    float utilization_percent;
    float fragmentation_ratio;
    float external_fragmentation;
    uint32_t free_list_counts[34];  
    uint32_t hash_collisions;
    uint32_t max_chain_length;
    float avg_chain_length;
    uint64_t total_allocations;
    uint64_t total_frees;
    uint32_t total_splits;
    uint32_t total_merges;
    bool is_healthy;
    bool needs_defrag;
} TLSFPoolStats;
typedef struct TLSFHealthReport {
    bool is_valid;
    bool has_memory_leaks;
    bool has_corrupted_blocks;
    bool has_broken_chains;
    bool has_hash_errors;
    int error_count;
    char error_messages[TLSF_MAX_ERRORS][256];
} TLSFHealthReport;
typedef struct GPUHotSystemSnapshot {
    uint64_t total_ops;
    int active_processes;
    int active_tasks;
    int max_priority_active;
    size_t total_vram_used;
    bool watchdog_alert;
    bool kernel_running;
    bool shutdown_requested;
    int active_priority_level;
    uint64_t signal_mask;
    uint32_t interrupt_cnt;
    uint32_t queue_head;
    uint32_t queue_tail;
    uint32_t queue_lock;
} GPUHotSystemSnapshot;
int gpu_hot_register_kernel(GPUHotRuntime* runtime, void* kernel_func,
                            dim3 grid, dim3 block, size_t shared_mem);
void gpu_hot_launch_kernel(GPUHotRuntime* runtime, int kernel_id, void** args);
int gpu_hot_begin_capture(GPUHotRuntime* runtime, int stream_id, const char* graph_name);
int gpu_hot_end_capture(GPUHotRuntime* runtime, int stream_id);
void gpu_hot_launch_graph(GPUHotRuntime* runtime, int graph_id, cudaStream_t stream);
void gpu_hot_destroy_graph(GPUHotRuntime* runtime, int graph_id);
cudaStream_t gpu_hot_get_stream(GPUHotRuntime* runtime, int stream_id);
cudaStream_t gpu_hot_get_priority_stream(GPUHotRuntime* runtime, int priority);
void gpu_hot_sync_all(GPUHotRuntime* runtime);
void gpu_hot_get_stats(GPUHotRuntime* runtime, GPUHotStats* stats);
void gpu_hot_get_tlsf_stats(GPUHotRuntime* runtime, TLSFPoolStats* stats);
void gpu_hot_validate_tlsf_pool(GPUHotRuntime* runtime, TLSFHealthReport* report);
void gpu_hot_print_pool_map(GPUHotRuntime* runtime);
void gpu_hot_defragment_pool(GPUHotRuntime* runtime);
void gpu_hot_set_warning_threshold(GPUHotRuntime* runtime, float threshold_percent);
void gpu_hot_set_auto_defrag(GPUHotRuntime* runtime, bool enable);
void* gpu_hot_shm_alloc(GPUHotRuntime* runtime, const char* name, size_t size);
void* gpu_hot_shm_open(GPUHotRuntime* runtime, const char* name);
void gpu_hot_shm_close(GPUHotRuntime* runtime, void* ptr);
void gpu_hot_shm_unlink(GPUHotRuntime* runtime, const char* name);
bool gpu_hot_get_registry_entry(GPUHotRuntime* runtime, int index,
                                char* name_out, size_t* size_out,
                                bool* active_out, unsigned long long* created_out);
void gpu_hot_set_watchdog(GPUHotRuntime* runtime, int timeout_ms);
bool gpu_hot_check_watchdog(GPUHotRuntime* runtime);
void gpu_hot_reset_watchdog(GPUHotRuntime* runtime);
PTXSystemState* gpu_hot_get_system_state(GPUHotRuntime* runtime);
PTXSystemState* gpu_hot_get_host_system_state(GPUHotRuntime* runtime);
void gpu_hot_reset_system_state(GPUHotRuntime* runtime);
void gpu_hot_flush_task_queue(GPUHotRuntime* runtime);
void gpu_hot_clear_signal_mask(GPUHotRuntime* runtime);
void gpu_hot_get_system_snapshot(GPUHotRuntime* runtime, GPUHotSystemSnapshot* snapshot);
void* gpu_hot_get_context(GPUHotRuntime* runtime);
void  gpu_hot_export_context(GPUHotRuntime* runtime);
void ptx_os_boot_persistent_kernel(GPUHotRuntime* runtime);
int ptx_os_submit_task(GPUHotRuntime* runtime, uint32_t opcode, uint32_t priority, void* args[PTX_MAX_TASK_ARGS]);
int ptx_cdp_test_recursive(GPUHotRuntime* runtime, int iterations);
VMMState* vmm_init(GPUHotRuntime* runtime, size_t swap_size);
void vmm_shutdown(VMMState* vmm);
void* vmm_alloc_page(VMMState* vmm, uint32_t flags);
void vmm_free_page(VMMState* vmm, void* addr);
int vmm_swap_out(VMMState* vmm, void* addr);
int vmm_swap_in(VMMState* vmm, void* addr);
void vmm_pin_page(VMMState* vmm, void* addr);
void vmm_unpin_page(VMMState* vmm, void* addr);
void vmm_get_stats(VMMState* vmm, uint64_t* resident, uint64_t* swapped,
                   uint64_t* faults, uint64_t* evictions);
void gpu_hot_set_vmm(GPUHotRuntime* runtime, VMMState* vmm);
int vmm_evict_for_alloc(VMMState* vmm, size_t needed_size);
VFSState* vfs_init(GPUHotRuntime* runtime);
void vfs_shutdown(VFSState* vfs);
VFSInode* vfs_lookup(VFSState* vfs, const char* path);
int vfs_mkdir(VFSState* vfs, const char* path, uint32_t mode);
int vfs_rmdir(VFSState* vfs, const char* path);
int vfs_unlink(VFSState* vfs, const char* path);
int vfs_open(VFSState* vfs, const char* path, uint32_t flags);
int vfs_close(VFSState* vfs, int fd);
ssize_t vfs_read(VFSState* vfs, int fd, void* buf, size_t count);
ssize_t vfs_write(VFSState* vfs, int fd, const void* buf, size_t count);
int vfs_seek(VFSState* vfs, int fd, size_t offset, int whence);
int vfs_create_tensor(VFSState* vfs, const char* path, int* shape, int dims, int dtype);
void* vfs_mmap_tensor(VFSState* vfs, const char* path);
int vfs_sync_tensor(VFSState* vfs, const char* path);
int vfs_readdir(VFSState* vfs, const char* path, char** names, int max_entries);
int vfs_stat(VFSState* vfs, const char* path, VFSInode* stat_out);