ferrite-os/crates/internal/ptx-sys/src/lib.rs


    // Kernel Registration & Launch API
    pub fn gpu_hot_register_kernel(
        runtime: *mut GPUHotRuntime,
        kernel_func: *mut c_void,
        grid: dim3,
        block: dim3,
        shared_mem: size_t,
    ) -> c_int;
    pub fn gpu_hot_launch_kernel(
        runtime: *mut GPUHotRuntime,
        kernel_id: c_int,
        args: *mut *mut c_void,
    );

    // CUDA Graph API
    pub fn gpu_hot_begin_capture(
        runtime: *mut GPUHotRuntime,
        stream_id: c_int,
        graph_name: *const c_char,
    ) -> c_int;
    pub fn gpu_hot_end_capture(runtime: *mut GPUHotRuntime, stream_id: c_int) -> c_int;
    pub fn gpu_hot_launch_graph(
        runtime: *mut GPUHotRuntime,
        graph_id: c_int,
        stream: cudaStream_t,
    );
    pub fn gpu_hot_destroy_graph(runtime: *mut GPUHotRuntime, graph_id: c_int);

    // Stream API
    pub fn gpu_hot_get_stream(runtime: *mut GPUHotRuntime, stream_id: c_int) -> cudaStream_t;
    pub fn gpu_hot_get_priority_stream(
        runtime: *mut GPUHotRuntime,
        priority: c_int,
    ) -> cudaStream_t;
    pub fn gpu_hot_sync_all(runtime: *mut GPUHotRuntime);

    // Statistics API
    pub fn gpu_hot_get_stats(runtime: *mut GPUHotRuntime, stats: *mut GPUHotStats);
    pub fn gpu_hot_get_tlsf_stats(runtime: *mut GPUHotRuntime, stats: *mut TLSFPoolStats);
    pub fn gpu_hot_validate_tlsf_pool(runtime: *mut GPUHotRuntime, report: *mut TLSFHealthReport);
    pub fn gpu_hot_print_pool_map(runtime: *mut GPUHotRuntime);

    // TLSF Pool Management
    pub fn gpu_hot_defragment_pool(runtime: *mut GPUHotRuntime);
    pub fn gpu_hot_set_warning_threshold(runtime: *mut GPUHotRuntime, threshold_percent: f32);
    pub fn gpu_hot_set_auto_defrag(runtime: *mut GPUHotRuntime, enable: bool);

    // Shared Memory / IPC API
    pub fn gpu_hot_shm_alloc(
        runtime: *mut GPUHotRuntime,
        name: *const c_char,
        size: size_t,
    ) -> *mut c_void;
    pub fn gpu_hot_shm_open(runtime: *mut GPUHotRuntime, name: *const c_char) -> *mut c_void;
    pub fn gpu_hot_shm_close(runtime: *mut GPUHotRuntime, ptr: *mut c_void);
    pub fn gpu_hot_shm_unlink(runtime: *mut GPUHotRuntime, name: *const c_char);
    pub fn gpu_hot_get_registry_entry(
        runtime: *mut GPUHotRuntime,
        index: c_int,
        name_out: *mut c_char,
        size_out: *mut size_t,
        active_out: *mut bool,
        created_out: *mut u64,
    ) -> bool;

    // Watchdog API
    pub fn gpu_hot_set_watchdog(runtime: *mut GPUHotRuntime, timeout_ms: c_int);
    pub fn gpu_hot_check_watchdog(runtime: *mut GPUHotRuntime) -> bool;
    pub fn gpu_hot_reset_watchdog(runtime: *mut GPUHotRuntime);

    // System State API
    pub fn gpu_hot_get_system_state(runtime: *mut GPUHotRuntime) -> *mut PTXSystemState;
    pub fn gpu_hot_get_host_system_state(runtime: *mut GPUHotRuntime) -> *mut PTXSystemState;
    pub fn gpu_hot_reset_system_state(runtime: *mut GPUHotRuntime);
    pub fn gpu_hot_flush_task_queue(runtime: *mut GPUHotRuntime);
    pub fn gpu_hot_clear_signal_mask(runtime: *mut GPUHotRuntime);
    pub fn gpu_hot_get_system_snapshot(
        runtime: *mut GPUHotRuntime,
        snapshot: *mut GPUHotSystemSnapshot,
    );

    // PTX-OS Kernel Boot
    pub fn ptx_os_boot_persistent_kernel(runtime: *mut GPUHotRuntime);
    pub fn ptx_os_submit_task(
        runtime: *mut GPUHotRuntime,
        opcode: u32,
        priority: u32,
        args: *mut *mut c_void,
    ) -> c_int;

    // CUDA Dynamic Parallelism — Device-Side Self-Scheduling
    pub fn ptx_cdp_test_recursive(
        runtime: *mut GPUHotRuntime,
        iterations: c_int,
    ) -> c_int;

    // Context Export API
    pub fn gpu_hot_get_context(runtime: *mut GPUHotRuntime) -> *mut c_void;
    pub fn gpu_hot_export_context(runtime: *mut GPUHotRuntime);

    // Context Hook API (weak - only available when libptx_hook.so is loaded)
    // These are called via the runtime wrapper, not directly.
    pub fn ptx_context_hook_get_stats(stats: *mut PTXContextStats);
    pub fn ptx_context_hook_reset_stats();

    // VMM API
    pub fn vmm_init(runtime: *mut GPUHotRuntime, swap_size: size_t) -> *mut VMMState;
    pub fn vmm_shutdown(vmm: *mut VMMState);
    pub fn vmm_alloc_page(vmm: *mut VMMState, flags: u32) -> *mut c_void;
    pub fn vmm_free_page(vmm: *mut VMMState, addr: *mut c_void);
    pub fn vmm_swap_out(vmm: *mut VMMState, addr: *mut c_void) -> c_int;
    pub fn vmm_swap_in(vmm: *mut VMMState, addr: *mut c_void) -> c_int;
    pub fn vmm_pin_page(vmm: *mut VMMState, addr: *mut c_void);
    pub fn vmm_unpin_page(vmm: *mut VMMState, addr: *mut c_void);
    pub fn vmm_get_stats(
        vmm: *mut VMMState,
        resident: *mut u64,
        swapped: *mut u64,
        faults: *mut u64,
        evictions: *mut u64,
    );
    pub fn gpu_hot_set_vmm(runtime: *mut GPUHotRuntime, vmm: *mut VMMState);
    pub fn vmm_evict_for_alloc(vmm: *mut VMMState, needed_size: size_t) -> c_int;

    // VFS API
    pub fn vfs_init(runtime: *mut GPUHotRuntime) -> *mut VFSState;
    pub fn vfs_shutdown(vfs: *mut VFSState);
    pub fn vfs_lookup(vfs: *mut VFSState, path: *const c_char) -> *mut VFSInode;
    pub fn vfs_mkdir(vfs: *mut VFSState, path: *const c_char, mode: u32) -> c_int;
    pub fn vfs_rmdir(vfs: *mut VFSState, path: *const c_char) -> c_int;
    pub fn vfs_unlink(vfs: *mut VFSState, path: *const c_char) -> c_int;
    pub fn vfs_open(vfs: *mut VFSState, path: *const c_char, flags: u32) -> c_int;
    pub fn vfs_close(vfs: *mut VFSState, fd: c_int) -> c_int;
    pub fn vfs_read(vfs: *mut VFSState, fd: c_int, buf: *mut c_void, count: size_t) -> ssize_t;
    pub fn vfs_write(vfs: *mut VFSState, fd: c_int, buf: *const c_void, count: size_t) -> ssize_t;
    pub fn vfs_seek(vfs: *mut VFSState, fd: c_int, offset: size_t, whence: c_int) -> c_int;
    pub fn vfs_create_tensor(
        vfs: *mut VFSState,
        path: *const c_char,
        shape: *mut c_int,
        dims: c_int,
        dtype: c_int,
    ) -> c_int;
    pub fn vfs_mmap_tensor(vfs: *mut VFSState, path: *const c_char) -> *mut c_void;
    pub fn vfs_sync_tensor(vfs: *mut VFSState, path: *const c_char) -> c_int;
    pub fn vfs_readdir(
        vfs: *mut VFSState,
        path: *const c_char,
        names: *mut *mut c_char,
        max_entries: c_int,
    ) -> c_int;
    pub fn vfs_stat(vfs: *mut VFSState, path: *const c_char, stat_out: *mut VFSInode) -> c_int;

    // Tensor Operations - Binary F32
    pub fn ptx_tensor_add_f32(
        a: *mut f32,
        b: *mut f32,
        out: *mut f32,
        n: size_t,
        stream: cudaStream_t,
    );
    pub fn ptx_tensor_sub_f32(
        a: *mut f32,
        b: *mut f32,
        out: *mut f32,
        n: size_t,
        stream: cudaStream_t,
    );
    pub fn ptx_tensor_mul_f32(
        a: *mut f32,
        b: *mut f32,
        out: *mut f32,
        n: size_t,
        stream: cudaStream_t,
    );
    pub fn ptx_tensor_div_f32(
        a: *mut f32,
        b: *mut f32,
        out: *mut f32,
        n: size_t,
        stream: cudaStream_t,
    );
    pub fn ptx_tensor_max_f32(
        a: *mut f32,
        b: *mut f32,
        out: *mut f32,
        n: size_t,
        stream: cudaStream_t,
    );
    pub fn ptx_tensor_min_f32(
        a: *mut f32,
        b: *mut f32,
        out: *mut f32,
        n: size_t,
        stream: cudaStream_t,
    );
    pub fn ptx_tensor_mod_f32(
        a: *mut f32,
        b: *mut f32,
        out: *mut f32,
        n: size_t,
        stream: cudaStream_t,
    );

    // Tensor Operations - Unary F32
    pub fn ptx_tensor_neg_f32(input: *mut f32, out: *mut f32, n: size_t, stream: cudaStream_t);
    pub fn ptx_tensor_abs_f32(input: *mut f32, out: *mut f32, n: size_t, stream: cudaStream_t);
    pub fn ptx_tensor_exp_f32(input: *mut f32, out: *mut f32, n: size_t, stream: cudaStream_t);
    pub fn ptx_tensor_log_f32(input: *mut f32, out: *mut f32, n: size_t, stream: cudaStream_t);
    pub fn ptx_tensor_sqrt_f32(input: *mut f32, out: *mut f32, n: size_t, stream: cudaStream_t);
    pub fn ptx_tensor_rsqrt_f32(input: *mut f32, out: *mut f32, n: size_t, stream: cudaStream_t);
    pub fn ptx_tensor_sin_f32(input: *mut f32, out: *mut f32, n: size_t, stream: cudaStream_t);
    pub fn ptx_tensor_cos_f32(input: *mut f32, out: *mut f32, n: size_t, stream: cudaStream_t);
    pub fn ptx_tensor_tanh_f32(input: *mut f32, out: *mut f32, n: size_t, stream: cudaStream_t);
    pub fn ptx_tensor_ceil_f32(input: *mut f32, out: *mut f32, n: size_t, stream: cudaStream_t);
    pub fn ptx_tensor_floor_f32(input: *mut f32, out: *mut f32, n: size_t, stream: cudaStream_t);
    pub fn ptx_tensor_round_f32(input: *mut f32, out: *mut f32, n: size_t, stream: cudaStream_t);
    pub fn ptx_tensor_sqr_f32(input: *mut f32, out: *mut f32, n: size_t, stream: cudaStream_t);
    pub fn ptx_tensor_recip_f32(input: *mut f32, out: *mut f32, n: size_t, stream: cudaStream_t);
    pub fn ptx_tensor_log2_f32(input: *mut f32, out: *mut f32, n: size_t, stream: cudaStream_t);
    pub fn ptx_tensor_log10_f32(input: *mut f32, out: *mut f32, n: size_t, stream: cudaStream_t);
    pub fn ptx_tensor_tan_f32(input: *mut f32, out: *mut f32, n: size_t, stream: cudaStream_t);
    pub fn ptx_tensor_sinh_f32(input: *mut f32, out: *mut f32, n: size_t, stream: cudaStream_t);
    pub fn ptx_tensor_cosh_f32(input: *mut f32, out: *mut f32, n: size_t, stream: cudaStream_t);
    pub fn ptx_tensor_sign_f32(input: *mut f32, out: *mut f32, n: size_t, stream: cudaStream_t);
    pub fn ptx_tensor_erf_f32(input: *mut f32, out: *mut f32, n: size_t, stream: cudaStream_t);

    // Tensor Operations - Activations F32
    pub fn ptx_tensor_relu_f32(input: *mut f32, out: *mut f32, n: size_t, stream: cudaStream_t);
    pub fn ptx_tensor_relu6_f32(input: *mut f32, out: *mut f32, n: size_t, stream: cudaStream_t);
    pub fn ptx_tensor_leaky_relu_f32(
        input: *mut f32,
        out: *mut f32,
        n: size_t,
        alpha: f32,
        stream: cudaStream_t,
    );
    pub fn ptx_tensor_elu_f32(
        input: *mut f32,
        out: *mut f32,
        n: size_t,
        alpha: f32,
        stream: cudaStream_t,
    );
    pub fn ptx_tensor_selu_f32(input: *mut f32, out: *mut f32, n: size_t, stream: cudaStream_t);
    pub fn ptx_tensor_gelu_f32(input: *mut f32, out: *mut f32, n: size_t, stream: cudaStream_t);
    pub fn ptx_tensor_sigmoid_f32(input: *mut f32, out: *mut f32, n: size_t, stream: cudaStream_t);
    pub fn ptx_tensor_silu_f32(input: *mut f32, out: *mut f32, n: size_t, stream: cudaStream_t);
    pub fn ptx_tensor_softplus_f32(input: *mut f32, out: *mut f32, n: size_t, stream: cudaStream_t);
    pub fn ptx_tensor_mish_f32(input: *mut f32, out: *mut f32, n: size_t, stream: cudaStream_t);
    pub fn ptx_tensor_gelu_tanh_f32(input: *mut f32, out: *mut f32, n: size_t, stream: cudaStream_t);
    pub fn ptx_tensor_hardswish_f32(input: *mut f32, out: *mut f32, n: size_t, stream: cudaStream_t);
    pub fn ptx_tensor_hardsigmoid_f32(input: *mut f32, out: *mut f32, n: size_t, stream: cudaStream_t);
